--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
-	<title>My Portfolio</title>
+	<title>Julian's Portfolio</title>
 	<link href="myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
