--- a/animation/index.html
+++ b/animation/index.html
@@ -9,12 +9,12 @@
 <body>
 <div class="container">
   <div class="header">
-  	<h1>Photoshop Projects</h1>
+  	<h1>Animation Projects</h1>
   </div>
   <div class="nav">
-    <h3><a href="../index.html">Links</a> | <a href="index.html">Raster</a><a> </a>| 2 | 3</h3>
+    <h3><a href="../index.html">Links</a></h3>
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content">Text</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
   </div>
