--- a/raster/index.html
+++ b/raster/index.html
@@ -12,9 +12,9 @@
   	<h1>Photoshop Projects</h1>
   </div>
   <div class="nav">
-    <h3><a href="../index.html">Links</a> | <a href="index.html">Raster</a><a> </a>| 2 | 3</h3>
+    <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Raster</a> | <a href="../vector/index.html">Vector</a> | <a href="../audio/index.html">Audio</a> | <a href="../animation/index.html">Animation</a> | <a href="../video/index.html">Video</a> |</h3>
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content">Text</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
   </div>
