--- a/audio/index.html
+++ b/audio/index.html
@@ -12,7 +12,7 @@
   	<h1>Audio Projects</h1>
   </div>
   <div class="nav">
-    <h3><a href="../index.html">Links</a></h3>
+    <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Raster</a> | <a href="../vector/index.html">Vector</a> | <a href="../audio/index.html">Audio</a> | <a href="../animation/index.html">Animation</a> | <a href="../video/index.html">Video</a></h3>
   </div>
   <div class="content">Text</div>
   <div class="footer">
