--- a/raster/index.html
+++ b/raster/index.html
@@ -9,10 +9,10 @@
 <body>
 <div class="container">
   <div class="header">
-  	<h1>Photoshop Projects</h1>
+  	<h1>Raster Projects</h1>
   </div>
   <div class="nav">
-    <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Raster</a> | <a href="../vector/index.html">Vector</a> | <a href="../audio/index.html">Audio</a> | <a href="../animation/index.html">Animation</a> | <a href="../video/index.html">Video</a> |</h3>
+    <h3><a href="../index.html">Home</a> | <a href="/raster/index.html">Raster</a> | <a href="../vector/index.html">Vector</a> | <a href="../audio/index.html">Audio</a> | <a href="../animation/index.html">Animation</a> | <a href="../video/index.html">Video</a> |</h3>
   </div>
   <div class="content">Text</div>
   <div class="footer">
