--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html class="homePage">
+<head>
+	<!-- This is a comment! Text here will be ignored by the browser. -->
+	<meta charset="UTF-8">
+	<title>Julian's Portfolio</title>
+	<link href="myCSS.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<div class="container">
+  <div class="header">
+  	<h1>Digital Media Portfolio</h1>
+  </div>
+  <div class="nav">
+    <h3><a href="index.html">Home</a> | <a href="raster/index.html">Raster</a> | <a href="vector/index.html">Vector</a> | <a href="audio/index.html">Audio</a> | <a href="animation/index.html">Animation</a> | <a href="video/index.html">Video</a></h3>
+  </div>
+  <div class="content">Text</div>
+  <div class="footer">
+    <h4><a href="aboutme.html">About Me</a> | Contact | Copyright 2021</h4>
+  </div>
+</div>
+</body>
+</html>
