--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="content">Text</div>
   <div class="footer">
-    <h4><a href="aboutme.html">About Me</a> | <a href="mailtojulichol9710@graniteschools.org:">Contact</a> | Copyright 2021</h4>  </div>
+    <h4><a href="aboutme.html">About Me</a> | <a href="mailto:julichol9710@graniteschools.org:">Contact</a> | Copyright 2021</h4>  </div>
 </div>
 </body>
 </html>
