--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<h1>Digital Media Portfolio</h1>
   </div>
   <div class="nav">
-    <h4><a href="index.html">Home</a> | <a href="raster/index.html">Raster</a> | <a href="vector/index.html">Vector</a> | <a href="audio/index.html">Audio</a> | <a href="animation/index.html">Animation</a> | <a href="video/index.html">Video</a></h4>
+    <h2><a href="index.html">Home</a> | <a href="raster/index.html">Raster</a> | <a href="vector/index.html">Vector</a> | <a href="audio/index.html">Audio</a> | <a href="animation/index.html">Animation</a> | <a href="video/index.html">Video</a></2>
   </div>
   <div class="content">Text</div>
   <div class="footer">
