--- a/raster/index.html
+++ b/raster/index.html
@@ -15,7 +15,7 @@
     <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Raster</a> | <a href="../vector/index.html">Vector</a> | <a href="../audio/index.html">Audio</a> | <a href="../animation/index.html">Animation</a> | <a href="../video/index.html">Video</a> |</h3>
   </div>
   <div class="content"> 
-	  <h2>Digital Media Raster Project Magazine Cover Sebtember 2021</h2>
+	  <h2> Raster Project: Magazine Cover Sebtember 2021</h2>
 	  <img src="magcover.jpg" alt="MagCover" width="900" height="1164">
 	</div>
   <div class="footer">
