--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <div class="nav">
     <h2><a href="index.html">Home</a> | <a href="raster/index.html">Raster</a> | <a href="vector/index.html">Vector</a> | <a href="audio/index.html">Audio</a> | <a href="animation/index.html">Animation</a> | <a href="video/index.html">Video</a></h2>
   </div>
-  <div class="content">Text</div>
+  <div class="content">
+		<img src="homecover.jpg" alt="HomeCover" width="1920" height="1080">
+	</div>
   <div class="footer">
     <h4><a href="aboutme.html">About Me</a> | <a href="mailto:julichol9710@graniteschools.org:">Contact</a> | Copyright 2021</h4>  </div>
 </div>
