--- a/raster/index.html
+++ b/raster/index.html
@@ -17,6 +17,8 @@
   <div class="content"> 
 	  <h2> Raster Project: Magazine Cover Sebtember 2021</h2>
 	  <img src="magcover.jpg" alt="MagCover" width="900" height="1164">
+	  <h2> Raster Project: Image Merging </h2>
+	  <img src="ropesnake" alt="Image merg number 1" width="1920" height="1080">
 	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
