--- a/raster/index.html
+++ b/raster/index.html
@@ -19,6 +19,9 @@
 	  <img src="magcover.jpg" alt="MagCover" width="900" height="1164">
 	  <h2> Raster Project: Image Merging </h2>
 	  <img src="ropesnake.png" alt="Image merg number 1" width="960" height="500">
+	  <h2> Raster Project: Album Cover October 2021</h2>
+	  <img src="AlbumCover.png" alt="Album Cover 1" width="1600" height="1600">
+	  <img src="AlbumCover2.png" alt="Album Cover 2" width="1600" height="1600">
 	</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
