--- a/vector/index.html
+++ b/vector/index.html
@@ -17,7 +17,7 @@
   <div class="content">
 	<h2> Vector Project: Flower Of Life October 2021</h2>
 	  <img src="FlowerOfLifeColor.png" alt="FlowerofLifeImage" width="800" height="800">
-	  h2> Vector Project: Watermark November 2021</h2>
+	  <h2> Vector Project: Watermark November 2021</h2>
 	  <img src="WaterMark-03.png" alt="WatermarkImage" width="800" height="800">
 	</div>
   <div class="footer">
