--- a/audio/index.html
+++ b/audio/index.html
@@ -14,7 +14,12 @@
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Raster</a> | <a href="../vector/index.html">Vector</a> | <a href="../audio/index.html">Audio</a> | <a href="../animation/index.html">Animation</a> | <a href="../video/index.html">Video</a></h3>
   </div>
-  <div class="content">Text</div>
+  <div class="content">
+	  <p>30 Second Audio Project</p>
+	<audio controls>
+		<source src="30secAudio.mp3" type="audio/mpeg">
+		Audio tag is not supported in this browser. </audio>
+	</div>
   <div class="footer">
     <h4><a href="aboutme.html">About Me</a> | <a href="mailtojulichol9710@graniteschools.org:">Contact</a> | Copyright 2021</h4>
   </div>
