--- a/raster/index.html
+++ b/raster/index.html
@@ -5,14 +5,37 @@
 	<meta charset="UTF-8">
 	<title>My Portfolio</title>
 	<link href="../myCSS.css" rel="stylesheet" type="text/css">
+<script type="text/javascript">
+function MM_swapImgRestore() { //v3.0
+  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
+}
+function MM_preloadImages() { //v3.0
+  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
+    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
+    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+}
+
+function MM_findObj(n, d) { //v4.01
+  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
+    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
+  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
+  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
+  if(!x && d.getElementById) x=d.getElementById(n); return x;
+}
+
+function MM_swapImage() { //v3.0
+  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
+   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
+}
+</script>
 </head>
-<body>
+<body onLoad="MM_preloadImages('Home02.png','raster/Video02.png','Raster02.png','Vector02.png','Audio02.png')">
 <div class="container">
   <div class="header">
   	<img src="TTRaster.png" alt="Title" width="350" height="60">
   </div>
   <div class="nav">
-    <h2><a href="../index.html">Home</a> | <a href="../raster/index.html">Raster</a> | <a href="../vector/index.html">Vector</a> | <a href="../audio/index.html">Audio</a> | <a href="../animation/index.html">Animation</a> | <a href="../video/index.html">Video</a> |</h2>
+    <h2><a href="../index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image13','','Home02.png',1)"><img src="Home1.png" alt="" width="100" height="30" id="Image13"></a><a href="index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Home','','raster/Home02.png',1)"></a><a href="raster/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image9','','raster/Raster02.png',1)"></a><a href="index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image13','','Raster02.png',1)"><img src="Raster01.png" alt="" width="100" height="30" id="Image"></a><a href="raster/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Raster','','raster/Raster02.png',1)"></a><a href="../vector/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('vector1','','Vector02.png',1)"><img src="Vector01.png" alt="" width="100" height="30" id="vector1"></a><a href="index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Home','','raster/Home02.png',1)"></a><a href="vector/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Vector','','raster/Video02.png',1)"></a><a href="../audio/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('audio','','Audio02.png',1)"><img src="Audio01.png" alt="" width="100" height="30" id="audio"></a><a href="../animation/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Audio','','raster/Audio02.png',1)"><img src="Animation01.png" alt="" width="100" height="30" id="Audio"></a><a href="../video/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Animation','','raster/Animation02.png',1)"><img src="Video01.png" alt="Animation" width="100" height="30" id="Animation"></a><a href="video/index.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Video','','raster/Video02.png',1)"></a><a href="index.html"><strong></a></h2>
   </div>
   <div class="content"> 
 	  <h2> Raster Project: Magazine Cover Sebtember 2021</h2>
