--- a/raster/index.html
+++ b/raster/index.html
@@ -7,13 +7,13 @@
 	<link href="../myCSS.css" rel="stylesheet" type="text/css">
 
 </head>
-<body onLoad="MM_preloadImages('Home02.png','raster/Video02.png','Raster02.png','Vector02.png','Audio02.png')">
+<body>
 <div class="container">
   <div class="header">
   	<img src="TTRaster.png" alt="Title" width="350" height="60">
   </div>
   <div class="nav">
-    <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Raster</a> | <a href="../vector/index.html">Vector</a> | <a href="../audio/index.html">Audio</a> | <a href="../animation/index.html">Animation</a> | <a href="../video/index.html">Video</a></h3>
+    <h3><a href="index.html">Home</a> | <a href="raster/index.html">Raster</a> | <a href="vector/index.html">Vector</a> | <a href="audio/index.html">Audio</a> | <a href="animation/index.html">Animation</a> | <a href="video/index.html">Video</a></h3>
   </div>
   <div class="content">
 		
