--- a/video/index.html
+++ b/video/index.html
@@ -14,7 +14,10 @@
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Raster</a> | <a href="../vector/index.html">Vector</a> | <a href="../audio/index.html">Audio</a> | <a href="../animation/index.html">Animation</a> | <a href="../video/index.html">Video</a></h3>
   </div>
-  <div class="content">Text</div>
+  <div class="content">
+	  <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+	
+</div>
   <div class="footer">
     <h4><a href="aboutme.html">About Me</a> | <a href="mailtojulichol9710@graniteschools.org:">Contact</a> | Copyright 2021</h4>
   </div>
