--- a/animation/index.html
+++ b/animation/index.html
@@ -17,7 +17,7 @@
   <div class="content">
 	  <h2>Animation Ad Project</h2>
 	  <h3>2022</h3>
-	  <a href="https://drive.google.com/file/d/1IYI4YIPQkHgoyCQlfS7cbnoSduZGvZVP/view?usp=sharing">|Download|</a>
+	 <h2><a href="https://drive.google.com/file/d/1IYI4YIPQkHgoyCQlfS7cbnoSduZGvZVP/view?usp=sharing">|Download|</a></h2>
 	  <img src="../screen1.png" alt="screenshot" width="960" height="500">
 	  
 	
