--- a/animation/index.html
+++ b/animation/index.html
@@ -17,12 +17,12 @@
   <div class="content">
 	  <h2>Animation Ad Project</h2>
 	  <h3>2022</h3>
-	 <a href="https://drive.google.com/file/d/1IYI4YIPQkHgoyCQlfS7cbnoSduZGvZVP/view?usp=sharing">Download</a>
+	<h2 style="color:blue;"><a href="https://drive.google.com/file/d/1IYI4YIPQkHgoyCQlfS7cbnoSduZGvZVP/view?usp=sharing">Download</a></h2>
 	  <img src="../screen1.png" alt="screenshot" width="960" height="500">
 
 	  <h2>Animation Walk Cycle Project</h2>
 	  <h3>2022</h3>
-	 <h2 style="color:black;"><a href="https://drive.google.com/file/d/1aSSwAcx8juds2yG-H21pqVY3YQhslOIv/view?usp=sharing">|Download|</a></h2>
+	 <h2 style="color:blue;"><a href="https://drive.google.com/file/d/1aSSwAcx8juds2yG-H21pqVY3YQhslOIv/view?usp=sharing">|Download|</a></h2>
 	  <img src="../screen2.png" alt="screenshot" width="960" height="500">
 	  
 	  
