--- a/animation/index.html
+++ b/animation/index.html
@@ -15,6 +15,15 @@
     <h3><a href="../index.html">Home</a> | <a href="../raster/index.html">Raster</a> | <a href="../vector/index.html">Vector</a> | <a href="../audio/index.html">Audio</a> | <a href="../animation/index.html">Animation</a> | <a href="../video/index.html">Video</a></h3>
   </div>
   <div class="content">
+	  
+	  <style>
+      .bg-blue {
+        background-color: blue;
+      }
+      .bg-red {
+        background-color: red;
+      }
+    </style>
 	  <h2>Animation Ad Project</h2>
 	  <h3>2022</h3>
 	<h2 style="color:blue;"><a href="https://drive.google.com/file/d/1IYI4YIPQkHgoyCQlfS7cbnoSduZGvZVP/view?usp=sharing">Download</a></h2>
