--- a/audio/index.html
+++ b/audio/index.html
@@ -22,6 +22,11 @@
 	<audio controls>
 		<source src="30secAudio.mp3" type="audio/mpeg">
 		Audio tag is not supported in this browser. </audio>
+	  
+	  <p>Story Telling audio Project</p>
+	<audio controls>
+		<source src="deathaudio.mp3" type="audio/mpeg">
+		Audio tag is not supported in this browser. </audio>
 	</div>
   <div class="footer">
     <h4><a href="aboutme.html">About Me</a> | <a href="mailtojulichol9710@graniteschools.org:">Contact</a> | Copyright 2021</h4>
