--- a/raster/index.html
+++ b/raster/index.html
@@ -28,7 +28,7 @@
 	  <img src="AlbumCover2.png" alt="Album Cover 2" width="800" height="800">
 	</div>
   <div class="footer">
-    <h4><a href="../aboutme.html">About Me</a> | <a href="mailto:julichol9710@graniteschools.org:">Contact</a> | Copyright 2021</h4>  </div>
+    <h4><a href="./aboutme.html">About Me</a> | <a href="mailto:julichol9710@graniteschools.org:">Contact</a> | Copyright 2021</h4>  </div>
   </div>
 </div>
 </body>
