--- a/video/index.html
+++ b/video/index.html
@@ -26,7 +26,7 @@
 	  <h3>Demise Of The Sleeping</h3>
 	 <a href="https://www.youtube.com/channel/UC1fP2-XoP7EJINbBL7co10Q">link text</a>
 	  
-	  <iframe width="960" height="540" src="https://www.youtube.com/embedOl8KrpU9dvs">
+	  <iframe width="960" height="540" src="https://www.youtube.com/embed/Ol8KrpU9dvs">
 </iframe>
 	
 </div>
