--- a/audio/index.html
+++ b/audio/index.html
@@ -20,7 +20,7 @@
   <div class="content">
 	  <p>30 Second Audio Project</p>
 	<audio controls>
-		<source src="30secAudio.mp3" type="audio/mpeg">
+		<source src="com30.mp3" type="audio/mpeg">
 		Audio tag is not supported in this browser. </audio>
 	  
 	  <p>Story Telling audio Project</p>
