--- a/audio/index.html
+++ b/audio/index.html
@@ -18,7 +18,7 @@
 		
   </div>
   <div class="content">
-	  <p>30 Second Audio Project</p>
+	  <p>30 Second commercial Project</p>
 	<audio controls>
 		<source src="com30.mp3" type="audio/mpeg">
 		Audio tag is not supported in this browser. </audio>
