--- a/raster/index.html
+++ b/raster/index.html
@@ -26,6 +26,8 @@
 	  <h2> Raster Project: Album Cover October 2021</h2>
 	  <img src="AlbumCover.png" alt="Album Cover 1" width="800" height="800">
 	  <img src="AlbumCover2.png" alt="Album Cover 2" width="800" height="800">
+	   <h2> 10 hour Project Image Merges </h2>
+	  <img src="tigermerg.png" alt="tiger merg" width="1000" height="1000">
 	</div>
   <div class="footer">
     <h4><a href="./aboutme.html">About Me</a> | <a href="mailto:julichol9710@graniteschools.org:">Contact</a> | Copyright 2021</h4>  </div>
