--- a/raster/index.html
+++ b/raster/index.html
@@ -26,7 +26,7 @@
 	  <h2> Raster Project: Album Cover October 2021</h2>
 	  <img src="AlbumCover.png" alt="Album Cover 1" width="800" height="800">
 	  <img src="AlbumCover2.png" alt="Album Cover 2" width="800" height="800">
-	   <h2> 10 hour Project Image Merges </h2>
+	   <h2> 10 Hour Project Image Merges </h2>
 	  <img src="tigermerg.png" alt="tiger merg" width="1000" height="1000">
 	</div>
   <div class="footer">
