--- a/animation/index.html
+++ b/animation/index.html
@@ -38,7 +38,7 @@
 	
 	</div>
   <div class="footer">
-   <h4><a href="aboutme.html">About Me</a> | <a href="mailtojulichol9710@graniteschools.org:">Contact</a> | Copyright 2021</h4>
+   <h4>Copyright 2021</h4>
   </div>
 </div>
 </body>
