--- a/audio/index.html
+++ b/audio/index.html
@@ -29,7 +29,7 @@
 		Audio tag is not supported in this browser. </audio>
 	</div>
   <div class="footer">
-    <h4><a href="aboutme.html">About Me</a> | <a href="mailtojulichol9710@graniteschools.org:">Contact</a> | Copyright 2021</h4>
+    <h4>Copyright 2021</h4>
   </div>
 </div>
 </body>
