--- a/raster/index.html
+++ b/raster/index.html
@@ -31,7 +31,7 @@
 	  <img src="merg2.png" alt="squirrel merg" width="1000" height="1000">
 	</div>
   <div class="footer">
-    <h4><a href="./aboutme.html">About Me</a> | <a href="mailto:julichol9710@graniteschools.org:">Contact</a> | Copyright 2021</h4>  </div>
+    <h4>Copyright 2021</h4>  </div>
   </div>
 </div>
 </body>
