--- a/vector/index.html
+++ b/vector/index.html
@@ -24,7 +24,7 @@
 	  <img src="WaterMark-03.png" alt="WatermarkImage" width="800" height="800">
 	</div>
   <div class="footer">
-    <h4><a href="aboutme.html">About Me</a> | <a href="mailtojulichol9710@graniteschools.org:">Contact</a> | Copyright 2021</h4>
+    <h4>Copyright 2021</h4>
   </div>
 </div>
 </body>
