--- a/raster/index.html
+++ b/raster/index.html
@@ -28,7 +28,7 @@
 	  <img src="AlbumCover2.png" alt="Album Cover 2" width="800" height="800">
 	   <h2> 10 Hour Project Image Merges </h2>
 	  <img src="tigermerg.png" alt="tiger merg" width="1000" height="1000">
-	  <img src="merg2.png" alt="squirrel merg" width="1000" height="1000">
+	  <img src="Merg2.png" alt="squirrel merg" width="1000" height="1000">
 	</div>
   <div class="footer">
     <h4>Copyright 2021</h4>  </div>
