--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@
   <div class="nav">
     <h3><a href="index.html">Home</a> | <a href="raster/index.html">Raster</a> | <a href="vector/index.html">Vector</a> | <a href="audio/index.html">Audio</a> | <a href="animation/index.html">Animation</a> | <a href="video/index.html">Video</a></h3>
   </div>
-  <div class="content">About me stuff</div>
+  <div class="content">I am a 16 year old student attending Skyline High in Salt Lake City Utah.</div>
   <div class="footer">
     <h4><a href="aboutme.html">About Me</a> | <a href="mailtojulichol9710@graniteschools.org:">Contact</a> | Copyright 2021</h4>
   </div>
